chorce(save from cms): code-at-tacc camps

--- a/web-content/root/education/stem-programs/code-at-tacc/robotics.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/robotics.html
@@ -115,13 +115,12 @@
 				</div>
 				<div class="col-md-4 col-sm-12">
 					<!--<h4 class="camp-subhead">
-						PROGRAM FORMS</h4>-->
-					<!--<ul class="info-list">
+						PROGRAM FORMS</h4>--><!--<ul class="info-list">
 						<li>
 							Required forms will be available soon.</li>
 					</ul>-->
 					<p>
-						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cErEbGtkbztc%253d&filter=peid%7CErEbGtkbztc%3D" target="_blank">Program Forms</a></p>
+						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cErEbGtkbztc%253d&amp;filter=peid%7CErEbGtkbztc%3D" target="_blank">Program Forms</a></p>
 					<p>
 						Code of Conduct (sent in mail),<br />
 						Release and Indemnification,<br />
@@ -139,35 +138,36 @@
 							<a href="/documents/1084364/1736606/YPP+Communication+Plan+Robotics+2022+Spanish.pdf/729f3cec-c6cd-4ee3-89ec-2d341ca58113" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
 					</ul>
 				</div>
+			</div>
 		</div>
 	</div>
-</div>
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<h2 class="camp-subhead">
-				Frequently Asked Questions</h2>
-			<!-- SPECIFIC TO THIS CAMP -->
-			<div aria-multiselectable="table" class="panel-group" id="robotics-camp-faq" role="tablist">
-				<strong>Dates &amp; Ages</strong>
-				<div class="panel panel-default">
-					<div class="panel-heading" id="dates" role="tab">
-						<h4 class="panel-title">
-							<a aria-controls="dates-answer" aria-expanded="true" class="collapsed" data-parent="#robotics-camp-faq" data-toggle="collapse" href="#dates-answer" role="button"> <b>Q:</b> What are the camp dates?</a></h4>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<h2 class="camp-subhead">
+					Frequently Asked Questions</h2>
+				<!-- SPECIFIC TO THIS CAMP -->
+				<div aria-multiselectable="table" class="panel-group" id="robotics-camp-faq" role="tablist">
+					<strong>Dates &amp; Ages</strong>
+					<div class="panel panel-default">
+						<div class="panel-heading" id="dates" role="tab">
+							<h4 class="panel-title">
+								<a aria-controls="dates-answer" aria-expanded="true" class="collapsed" data-parent="#robotics-camp-faq" data-toggle="collapse" href="#dates-answer" role="button"> <b>Q:</b> What are the camp dates?</a></h4>
+						</div>
+						<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
+							<div class="panel-body">
+								<b>A:</b> Sunday, June 26, 2022 through Saturday, July 2, 2022.</div>
+						</div>
 					</div>
-					<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
-						<div class="panel-body">
-							<b>A:</b> Sunday, June 26, 2022 through Saturday, July 2, 2022.</div>
-					</div>
-				</div>
-				<div class="panel panel-default">
-					<div class="panel-heading" id="ages" role="tab">
-						<h4 class="panel-title">
-							<a aria-controls="ages-answer" aria-expanded="true" class="collapsed" data-parent="#robotics-camp-faq" data-toggle="collapse" href="#ages-answer" role="button"> <b>Q</b>: What are the ages of the Code@TACC participants?</a></h4>
-					</div>
-					<div aria-labelledby="ages" class="panel-collapse collapse" id="ages-answer" role="tabpanel">
-						<div class="panel-body">
-							<b>A:</b> During the summer program, participants are rising sophomores and juniors in high school.</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" id="ages" role="tab">
+							<h4 class="panel-title">
+								<a aria-controls="ages-answer" aria-expanded="true" class="collapsed" data-parent="#robotics-camp-faq" data-toggle="collapse" href="#ages-answer" role="button"> <b>Q</b>: What are the ages of the Code@TACC participants?</a></h4>
+						</div>
+						<div aria-labelledby="ages" class="panel-collapse collapse" id="ages-answer" role="tabpanel">
+							<div class="panel-body">
+								<b>A:</b> During the summer program, participants are rising sophomores and juniors in high school.</div>
+						</div>
 					</div>
 				</div>
 			</div>
