--- a/web-content/root/education/stem-programs/code-at-tacc/connected.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/connected.html
@@ -106,13 +106,12 @@
 				</div>
 				<div class="col-md-4 col-sm-12">
 					<!--<h4 class="camp-subhead">
-						PROGRAM FORMS</h4>-->
-					<!--<ul class="info-list">
+						PROGRAM FORMS</h4>--><!--<ul class="info-list">
 						<li>
 							Required forms will be available soon.</li>
 					</ul>-->
 					<p>
-						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257c%252f143oHZkDNA%253d&filter=peid%7C%2F143oHZkDNA%3D" target="_blank">Program Forms</a></p>
+						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257c%252f143oHZkDNA%253d&amp;filter=peid%7C%2F143oHZkDNA%3D" target="_blank">Program Forms</a></p>
 					<p>
 						Release and Indemnification,<br />
 						Media Release,<br />
@@ -128,8 +127,7 @@
 						<li>
 							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+Connected+-+SPANISH.pdf" target="_blank">2021 Y.P.P. Communication Plan - Español</a></li>
 					</ul>
-				</div>-->
-			</div>
+				</div>--></div>
 		</div>
 	</div>
 </div>
@@ -140,7 +138,7 @@
 				Frequently Asked Questions</h2>
 			<!-- SPECIFIC TO THIS CAMP -->
 			<div aria-multiselectable="table" class="panel-group" id="connected-camp-faq" role="tablist">
-				<strong>Dates & Ages</strong>
+				<strong>Dates &amp; Ages</strong>
 				<div class="panel panel-default">
 					<div class="panel-heading" id="dates" role="tab">
 						<h4 class="panel-title">
