--- a/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -109,13 +109,12 @@
 				</div>
 				<div class="col-md-4 col-sm-12">
 					<!--<h4 class="camp-subhead">
-						PROGRAM FORMS</h4>-->
-					<!--<ul class="info-list">
+						PROGRAM FORMS</h4>--><!--<ul class="info-list">
 						<li>
 							Required forms will be available soon.</li>
 					</ul>-->
 					<p>
-						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cXKQGsJJEGEI%253d&filter=peid%7CXKQGsJJEGEI%3D" target="_blank">Program Forms</a></p>
+						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cXKQGsJJEGEI%253d&amp;filter=peid%7CXKQGsJJEGEI%3D" target="_blank">Program Forms</a></p>
 					<p>
 						Code of Conduct,<br />
 						Release and Indemnification,<br />
@@ -144,7 +143,7 @@
 				Frequently Asked Questions</h2>
 			<!-- SPECIFIC TO THIS CAMP -->
 			<div aria-multiselectable="table" class="panel-group" id="cybersecurity-camp-faq" role="tablist">
-				<strong>Dates & Ages</strong>
+				<strong>Dates &amp; Ages</strong>
 				<div class="panel panel-default">
 					<div class="panel-heading" id="dates" role="tab">
 						<h4 class="panel-title">
