--- a/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -115,12 +115,12 @@
 					</ul>-->
 					<p>
 						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cXKQGsJJEGEI%253d&amp;filter=peid%7CXKQGsJJEGEI%3D" target="_blank">Program Forms</a></p>
-					<p>
+					<p><small>
 						Code of Conduct,<br />
 						Release and Indemnification,<br />
 						Media Release,<br />
 						Y.P.P. Medical Treatment Authorization<br />
-						&amp; Transportation Form</p>
+						&amp; Transportation Form</small></p>
 				</div>
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
