--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -51,70 +51,14 @@
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
-				<a aria-controls="resa-iii" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#resa-iii" role="button">Research Engineering/Scientist Associate III</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="resa-iii" role="tabpanel">
-			<div class="panel-body">
-				<p>
-					Assist research groups and individuals in deploying applications for managing, sharing, and preserving data, making use of TACC data resources.</p>
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Engineering-Scientist-Associate-III_R_00018935" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-			</div>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
-				<a aria-controls="resa-iii-2" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#resa-iii-2" role="button">Research Engineering/Scientist Associate III</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="resa-iii-2" role="tabpanel">
-			<div class="panel-body">
-				<p>
-					Assist research groups and individuals in working with data using the systems at TACC, and building applications to manage and analyze data across these systems in support of researchers.</p>
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Engineering-Scientist-Associate-III_R_00018936" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-			</div>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
 				<a aria-controls="research-associate" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#research-associate" role="button">Research Associate</a></h4>
 		</div>
 		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate" role="tabpanel">
 			<div class="panel-body">
 				<p>
-					This Research Associate for High Performance Computing (HPC) will provide leadership and technical expertise to TACC’s HPC research, development, and support initiatives with a strong emphasis on supporting climate&#x2F;weather&#x2F;ocean research on HPC resources.</p>
+					This Research Associate for High Performance Computing (HPC) will provide leadership and technical expertise to TACC's HPC research, development, and support initiatives with a strong emphasis on supporting climate/weather/ocean research on HPC resources.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00018422" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-			</div>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
-				<a aria-controls="hpc-user-support-research-engineering-scientist-associate-ii" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#hpc-user-support-research-engineering-scientist-associate-ii" role="button">HPC User Support Research Engineering/Scientist Associate II</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="hpc-user-support-research-engineering-scientist-associate-ii" role="tabpanel">
-			<div class="panel-body">
-				<p>
-					The Research Engineering&#x2F;Scientist Associate II will join the High Performance Computing (HPC) area and serve as front-line user support. This individual will answer technical questions, support training efforts, and review technical documentation.</p>
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/HPC-User-Support-Research-Engineering-Scientist-Associate-II_R_00018423" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-			</div>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
-				<a aria-controls="wma-software-devloper" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#wma-software-devloper" role="button">Software Developer</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="wma-software-devloper" role="tabpanel">
-			<div class="panel-body">
-				<p>
-					This position will contribute to the design, development, and maintenance of the Web &amp; Mobile Applications (WMA) group web services and applications.</p>
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Software-Developer_R_00019253" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
@@ -126,7 +70,7 @@
 		<div aria-labelledby="data" class="panel-collapse collapse" id="sys-admin-i" role="tabpanel">
 			<div class="panel-body">
 				<p>
-					This position will join the Texas Advanced Computing Center(TACC) as part of the Technical Infrastructure team. The position will provide leadership and technical expertise to TACC&#39;s advanced computing activities, supporting and enhancing TACC&#39;s world class supercomputing resources.</p>
+					This position will join the Texas Advanced Computing Center(TACC) as part of the Technical Infrastructure team. The position will provide leadership and technical expertise to TACC's advanced computing activities, supporting and enhancing TACC's world class supercomputing resources.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Systems-Administrator-I_R_00019313" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
