--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -56,7 +56,7 @@
 		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate" role="tabpanel">
 			<div class="panel-body">
 				<p>
-					This Research Associate for High Performance Computing (HPC) will provide leadership and technical expertise to TACC's HPC research, development, and support initiatives with a strong emphasis on supporting climate/weather/ocean research on HPC resources.</p>
+					This Research Associate for High Performance Computing (HPC) will provide leadership and technical expertise to TACC’s HPC research, development, and support initiatives with a strong emphasis on supporting climate&#x2F;weather&#x2F;ocean research on HPC resources.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00018422" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
@@ -70,7 +70,7 @@
 		<div aria-labelledby="data" class="panel-collapse collapse" id="sys-admin-i" role="tabpanel">
 			<div class="panel-body">
 				<p>
-					This position will join the Texas Advanced Computing Center(TACC) as part of the Technical Infrastructure team. The position will provide leadership and technical expertise to TACC's advanced computing activities, supporting and enhancing TACC's world class supercomputing resources.</p>
+					This position will join the Texas Advanced Computing Center(TACC) as part of the Technical Infrastructure team. The position will provide leadership and technical expertise to TACC&#39;s advanced computing activities, supporting and enhancing TACC&#39;s world class supercomputing resources.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Systems-Administrator-I_R_00019313" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
@@ -101,6 +101,34 @@
 					Position is for a one year assignment which can be renewed on an annual basis up to a total of five years. Previous time in a postdoctoral fellow position (whether paid or unpaid) at the University or at any other university counts towards this time limitation (unless the area or discipline changes).</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Postdoctoral-Fellow_R_00019803" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="sr-admin-program-coordinator" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#sr-admin-program-coordinator" role="button">Senior Administrative Program Coordinator</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="sr-admin-program-coordinator" role="tabpanel">
+			<div class="panel-body">
+				<p>
+					Please see <a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Administrative-Program-Coordinator_R_00019806-1" target="_blank">full job posting</a> for more details.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Administrative-Program-Coordinator_R_00019806-1" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="software-developer" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#software-developer" role="button">Software Developer</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="software-developer" role="tabpanel">
+			<div class="panel-body">
+				<p>
+					The Texas Advanced Computing Center (TACC) at The University of Texas at Austin is one of the leading supercomputing centers in the world, supporting advances in computational research by thousands of researchers and students. This position will join TACC’s Advanced Computing Interfaces (ACI) department as part of the Web and Mobile Applications (WMA) team as a software developer with an opportunity to demonstrate and expand both your technical and soft skills. Our team is brought together by a shared belief in using our software engineering skills to add value to the world. We are a passionate and diverse team of Software Engineers, DevOps, Project Managers, and Support staff brought together to embody the vision of creating software to change the world.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Software-Developer_R_00020298" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
