chore(rt-22252): initial attempt at new changes

--- a/web-content/root/education-new/k-12-outreach/students/alumni/susan-fratkin-scholarship--body.html
+++ b/web-content/root/education-new/k-12-outreach/students/alumni/susan-fratkin-scholarship--body.html
@@ -3,7 +3,11 @@
 <h4>
 	The Susan Fratkin Scholarship was established in honor of an ambassador for high performance computing (HPC) workforce development and a distinguished leader in state and federal relations.</h4>
 <p>
-	The Susan Fratkin Scholarship aims to address educational inequities and support undergraduate student persistence in higher education. Specifically, scholarships will be awarded to Code@TACC alumni, majority are women and/or from underrepresented populations in Science, Technology, Engineering, and Mathematics (STEM) disciplines (African American/Black, Hispanic/Latinx, Native, Indigenous).</p>
+	<img alt="" src="/documents/1084364/2124664/CASC+LOGO-color-2021.jpeg/c1b0612e-d471-46ed-902b-0f642e86d39b?t=1654617447344" style="float: right; padding-left: 1em;" />The Susan Fratkin Scholarship aims to address educational inequities and support undergraduate student persistence in higher education. Specifically, scholarships will be awarded to Code@TACC alumni, majority are women and/or from underrepresented populations in Science, Technology, Engineering, and Mathematics (STEM) disciplines (African American/Black, Hispanic/Latinx, Native, Indigenous).</p>
+<p>
+	The Coalition for Academic Scientific Computation (CASC) is proud to be a Sustaining Partner of the Susan Fratkin Scholarship Fund. Founded in 1989, CASC is an educational nonprofit organization with close to 100 member institutions representing many of the nation's most forward-thinking universities and computing centers. CASC is dedicated to advocating the use of the most advanced computing technology to accelerate scientific discovery for national competitiveness, global security, and economic success, as well as develop a diverse and well-prepared 21st-century workforce.</p>
+<p>
+	Sue Fratkin served as the CASC Washington Liaison for 25 years, bringing Congressional attention to the importance of HPC, and positioning CASC as a trusted source of information and feedback for major federal agencies including the National Science Foundation, National Institutes of Health, and Department of Energy.</p>
 <hr />
 <h5>
 	Support Scholarships for Code@TACC Alumni</h5>
