--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -8,11 +8,12 @@
 	Training &amp; Events</h2>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://research.utexas.edu/cbrs/classes/big-data-in-biology-summer-school/2022-summer-school/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/utvprsce.png" style="margin-bottom:10px;" /></a></div>
+		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=121" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/intel.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://research.utexas.edu/cbrs/classes/big-data-in-biology-summer-school/2022-summer-school/" target="_blank">Big Data in Biology Summer School 2022</a><br />
-			May 31 – June 24&nbsp; |&nbsp;
-			multiple courses lasting from 4-5 days</p>
+			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=121" target="_blank"><strong>Intel Developer Tools Optimization Training</strong></a><br />
+			June 30<span>&nbsp; |&nbsp;
+			10:00 AM – 1:00 PM CST</span>&nbsp; |&nbsp;
+			<a href="https://docs.google.com/document/d/1xkEF2qVVvHVqeFdq68OGZbfFvzVYSeh93DIdLEhU-nk/edit?usp=sharing" target="_blank">Agenda</a></p>
 	</div>
 </div>
