chore(rt-21813): (noop) update from cms

--- a/web-content/root/education/undergrads-grads/reu--content.html
+++ b/web-content/root/education/undergrads-grads/reu--content.html
@@ -35,8 +35,7 @@
 <h4 style="margin-top:20px;">
 	APPLICATION &amp; SELECTION</h4>
 <!--<p>
-	The application period for Summer 2022 is approaching (contingent on funding). Be the first to find out about updates: <a href="https://utexas.qualtrics.com/jfe/form/SV_dipKcjC7PAF5qmO" target="_blank">Interest Form</a>.</p>-->
-<!--<p>
+	The application period for Summer 2022 is approaching (contingent on funding). Be the first to find out about updates: <a href="https://utexas.qualtrics.com/jfe/form/SV_dipKcjC7PAF5qmO" target="_blank">Interest Form</a>.</p>--><!--<p>
 	The application for Summer 2022 is now open.</p>-->
 <p>
 	The application for Summer 2022 is closed. Notifications of acceptance for Summer 2022: Rolling until April 28. The application for Summer 2023 will open on November 1, 2022.</p>
