--- a/web-content/root/education/undergrads-grads/reu--content.html
+++ b/web-content/root/education/undergrads-grads/reu--content.html
@@ -5,7 +5,7 @@
 <h4>
 	June 6 – August 5, 2022</h4>
 <p>
-	The Cyberinfrastructure (CI) Research for Social Change Research Experience for Undergraduates (REU) at TACC is actively engaging 10 undergraduate students each summer for nine-weeks in solving real-world problems of national relevance, teaching them to not only be critical thinkers, but to be creative and reflective as well.</p>
+	The Research Experience for Undergraduates (REU) Site: Cyberinfrastructure (CI) Research for Social Change Research Experience for Undergraduates (REU) at TACC is engaging 10 undergraduate students each summer for nine weeks in solving real-world problems of national relevance, teaching them to not only be critical thinkers, but to be creative and reflective as well.</p>
 <p>
 	Students gain skills in advanced programming and problem solving and use the CI to conduct cutting-edge research in engineering, science, and computational medicine. Research projects emphasize advanced computing as a tool to power discoveries that will impact social change for future generations.</p>
 <p>
@@ -31,15 +31,15 @@
 <h4 style="margin-top:20px;">
 	STIPEND</h4>
 <p>
-	Participants will receive a $5,400 stipend. Additionally, travel grants to present research at an annual conference will be available to selected participants. In-person experiences include travel and housing (+meal card) at The University of Texas at Austin.</p>
+	Participants will receive a $5,400 stipend, housing (+ meal card) at The University of Texas at Austin, and travel arranged by TACC. Additionally, travel grants to present research at an annual conference will be available to selected participants.</p>
 <h4 style="margin-top:20px;">
 	APPLICATION &amp; SELECTION</h4>
 <!--<p>
 	The application period for Summer 2022 is approaching (contingent on funding). Be the first to find out about updates: <a href="https://utexas.qualtrics.com/jfe/form/SV_dipKcjC7PAF5qmO" target="_blank">Interest Form</a>.</p>--><!--<p>
 	The application for Summer 2022 is now open.</p>-->
 <p>
-	The application for Summer 2022 is closed. Notifications of acceptance for Summer 2022: Rolling until April 28. The application for Summer 2023 will open on November 1, 2022.</p>
-<ol>
+	The application for Summer 2022 is closed. The application for Summer 2023 will open on November 1, 2022.</p>
+<!--<ol>
 	<li>
 		Complete the <a href="https://forms.gle/uAoQft2dSEvo8dkB6" target="_blank">application</a> before April 22, 2022, 11:59 pm CST.</li>
 	<li>
@@ -48,7 +48,7 @@
 		Secure commitment from two recommenders. These individuals should know your academic abilities and work ethic. At least one recommender should be college/university faculty. It is your responsibility to ask recommenders to complete the <a href="https://utexas.qualtrics.com/jfe/form/SV_b3YJWkrcx2TcOq2" target="_blank">recommendation form</a> by the April 22 priority deadline.</li>
 </ol>
 <p>
-	Notifications of acceptance for Summer 2022: Rolling until April 28.</p>
+	Notifications of acceptance for Summer 2022: Rolling until April 28.</p>-->
 <h4 style="margin-top:20px;">
 	ELIGIBILITY</h4>
 <p>
