chore(rt-21813): reu page (uncertain changes)

--- a/web-content/root/education/undergrads-grads/reu--content.html
+++ b/web-content/root/education/undergrads-grads/reu--content.html
@@ -39,6 +39,8 @@
 	The application for Summer 2022 is now open.</p>-->
 <p>
 	The application for Summer 2022 is closed. The application for Summer 2023 will open on November 1, 2022.</p>
+<p>
+	Made possible with the support of <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2150390&HistoricalAwards=false" target="_blank">National Science Foundation Award #2150390</a>.</p>
 <!--<ol>
 	<li>
 		Complete the <a href="https://forms.gle/uAoQft2dSEvo8dkB6" target="_blank">application</a> before April 22, 2022, 11:59 pm CST.</li>
