--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -8,12 +8,21 @@
 	Training &amp; Events</h2>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=121" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/intel.png" style="margin-bottom:10px;" /></a></div>
+		<a href="https://frontera-portal.tacc.utexas.edu/user-meeting/2022/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/frontera-all-logos.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=121" target="_blank"><strong>Intel Developer Tools Optimization Training</strong></a><br />
-			June 30<span>&nbsp; |&nbsp;
-			10:00 AM – 1:00 PM CST</span>&nbsp; |&nbsp;
-			<a href="https://docs.google.com/document/d/1xkEF2qVVvHVqeFdq68OGZbfFvzVYSeh93DIdLEhU-nk/edit?usp=sharing" target="_blank">Agenda</a></p>
+			<a href="https://frontera-portal.tacc.utexas.edu/user-meeting/2022/" target="_blank">2022 Frontera User Meeting – Registration Open!</a><br />
+			August 4–5, 2022&nbsp; |&nbsp;
+			Austin, TX</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://pearc.acm.org/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/pearc22.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://pearc.acm.org/" target="_blank">PEARC22</a><br />
+			July 10–14, 2022&nbsp; |&nbsp;
+			Boston, MA</p>
 	</div>
 </div>
