chore(rt-22364,22287,22271): remove staff

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -77,19 +77,11 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/suzanne-bailey">Bailey, Suzanne</a></td>
-			<td>
-				<a href="mailto:suzanne@tacc.utexas.edu">suzanne@tacc.utexas.edu</a></td>
-			<td>
-				<a name="B"></a> Center Operations &amp; Administration</td>
-		</tr>
-		<tr>
-			<td>
 				<a href="/web/website/about/directory/stephanie-baker">Baker, Stephanie</a></td>
 			<td>
 				<a href="mailto:snbaker@tacc.utexas.edu">snbaker@tacc.utexas.edu</a></td>
 			<td>
-				Expanding Pathways in Computing</td>
+				<a name="B"></a> Expanding Pathways in Computing</td>
 		</tr>
 		<tr>
 			<td>
@@ -346,14 +338,6 @@
 				<a href="mailto:jdrake@tacc.utexas.edu">jdrake@tacc.utexas.edu</a></td>
 			<td>
 				Health Analytics</td>
-		</tr>
-		<tr>
-			<td>
-				<a href="/web/website/about/directory/aaron-dubrow">Dubrow, Aaron </a></td>
-			<td>
-				<a href="mailto:aarondubrow@tacc.utexas.edu">aarondubrow@tacc.utexas.edu</a></td>
-			<td>
-				Communications, Media &amp; Design</td>
 		</tr>
 		<tr>
 			<td>
@@ -962,14 +946,6 @@
 				<a href="mailto:ipark@tacc.utexas.edu">ipark@tacc.utexas.edu</a></td>
 			<td>
 				Web &amp; Mobile Applications</td>
-		</tr>
-		<tr>
-			<td>
-				<a href="/web/website/about/directory/kelly-pierce">Pierce, Kelly</a></td>
-			<td>
-				<a href="mailto:kpierce@tacc.utexas.edu">kpierce@tacc.utexas.edu</a></td>
-			<td>
-				Data Management &amp; Collections</td>
 		</tr>
 		<tr>
 			<td>
