feat(rt-22294,22253,22212): add staff

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -413,6 +413,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/lydia-fletcher">Fletcher, Lydia</a></td>
+			<td>
+				<a href="mailto:lfletcher@tacc.utexas.edu">lfletcher@tacc.utexas.edu</a></td>
+			<td>
+				Data Management &amp; Collections</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/john-fonner">Fonner, John</a></td>
 			<td>
 				<a href="mailto:jfonner@tacc.utexas.edu">jfonner@tacc.utexas.edu</a></td>
@@ -570,6 +578,14 @@
 				<a href="mailto:ragomez@tacc.utexas.edu">ragomez@tacc.utexas.edu</a></td>
 			<td>
 				Education &amp; Outreach</td>
+		</tr>
+		<tr>
+			<td>
+				<a href="/web/website/about/directory/vanessa-gonzalez">Gonzalez, Vanessa</a></td>
+			<td>
+				<a href="mailto:vgonzalez@tacc.utexas.edu">vgonzalez@tacc.utexas.edu</a></td>
+			<td>
+				Web &amp; Mobile Applications Group</td>
 		</tr>
 		<tr>
 			<td>
@@ -874,6 +890,14 @@
 				<a href="mailto:minyard@tacc.utexas.edu">minyard@tacc.utexas.edu</a></td>
 			<td>
 				Advanced Computing Services: Large Scale Systems</td>
+		</tr>
+		<tr>
+			<td>
+				<a href="/web/website/about/directory/william-mobley">Mobley, William</a></td>
+			<td>
+				<a href="mailto:wmobley@tacc.utexas.edu">wmobley@tacc.utexas.edu</a></td>
+			<td>
+				Data Management &amp; Collections</td>
 		</tr>
 		<tr>
 			<td>
