chore(rt-22579): update from cms

--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -51,48 +51,6 @@
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
-				<a aria-controls="research-associate" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#research-associate" role="button">Research Associate</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate" role="tabpanel">
-			<div class="panel-body">
-				<p>
-					This Research Associate for High Performance Computing (HPC) will provide leadership and technical expertise to TACC’s HPC research, development, and support initiatives with a strong emphasis on supporting climate&#x2F;weather&#x2F;ocean research on HPC resources.</p>
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00018422" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-			</div>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
-				<a aria-controls="sys-admin-i" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#sys-admin-i" role="button">Systems Administrator I</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="sys-admin-i" role="tabpanel">
-			<div class="panel-body">
-				<p>
-					This position will join the Texas Advanced Computing Center(TACC) as part of the Technical Infrastructure team. The position will provide leadership and technical expertise to TACC&#39;s advanced computing activities, supporting and enhancing TACC&#39;s world class supercomputing resources.</p>
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Systems-Administrator-I_R_00019313" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-			</div>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
-				<a aria-controls="eng-sci-assoc" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#eng-sci-assoc" role="button">Engineering Scientist Associate</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="eng-sci-assoc" role="tabpanel">
-			<div class="panel-body">
-				<p>
-					This position will help envision, design, create, and support innovative technical approaches for applying big data applications and machine learning technologies to topical areas ranging from epidemiology to synthetic biology to neuroscience.</p>
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Engineering-Scientist-Associate_R_00018928" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-			</div>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
 				<a aria-controls="post-doc-fellow" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#post-doc-fellow" role="button">Postdoctoral Fellow</a></h4>
 		</div>
 		<div aria-labelledby="data" class="panel-collapse collapse" id="post-doc-fellow" role="tabpanel">
@@ -107,14 +65,42 @@
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
-				<a aria-controls="sr-admin-program-coordinator" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#sr-admin-program-coordinator" role="button">Senior Administrative Program Coordinator</a></h4>
+				<a aria-controls="research-associate" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#research-associate" role="button">Research Associate</a></h4>
 		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="sr-admin-program-coordinator" role="tabpanel">
+		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate" role="tabpanel">
 			<div class="panel-body">
 				<p>
-					Please see <a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Administrative-Program-Coordinator_R_00019806-1" target="_blank">full job posting</a> for more details.</p>
+					This Research Associate for High Performance Computing (HPC) will provide leadership and technical expertise to TACC's HPC research, development, and support initiatives with a strong emphasis on supporting climate/weather/ocean research on HPC resources.</p>
 				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Administrative-Program-Coordinator_R_00019806-1" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00018422" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="senior-devops-engineer" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#senior-devops-engineer" role="button">Senior DevOps Engineer</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="senior-devops-engineer" role="tabpanel">
+			<div class="panel-body">
+				<p>
+					As part of the Cloud and Interactive Computing group, this position will contribute to the design, implementation and operation of cloud infrastructure and DevOps supporting computational science endeavors. The successful candidate will lead multiple high-profile projects, from requirements gathering and design to production deployment and maintenance.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-DevOps-Engineer_R_00020737" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="senior-systems-administrator" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#senior-systems-administrator" role="button">Senior Systems Administrator</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="senior-systems-administrator" role="tabpanel">
+			<div class="panel-body">
+				<p>
+					The Large Scale Systems group is seeking a candidate with advanced knowledge of storage hardware configuration, parallel filesystem design and operation, and Linux systems administration. Highly desire expertise in Linux-based clusters, high performance computing (HPC) software environments, high-speed interconnects such as InfiniBand, and parallel file systems such as Lustre or BeeGFS. A significant grasp of Linux/Unix shells and scripting languages will also be necessary to perform in this role.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Systems-Administrator_R_00020368" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
@@ -126,7 +112,7 @@
 		<div aria-labelledby="data" class="panel-collapse collapse" id="software-developer" role="tabpanel">
 			<div class="panel-body">
 				<p>
-					The Texas Advanced Computing Center (TACC) at The University of Texas at Austin is one of the leading supercomputing centers in the world, supporting advances in computational research by thousands of researchers and students. This position will join TACC’s Advanced Computing Interfaces (ACI) department as part of the Web and Mobile Applications (WMA) team as a software developer with an opportunity to demonstrate and expand both your technical and soft skills. Our team is brought together by a shared belief in using our software engineering skills to add value to the world. We are a passionate and diverse team of Software Engineers, DevOps, Project Managers, and Support staff brought together to embody the vision of creating software to change the world.</p>
+					The Texas Advanced Computing Center (TACC) at The University of Texas at Austin is one of the leading supercomputing centers in the world, supporting advances in computational research by thousands of researchers and students. This position will join TACC's Advanced Computing Interfaces (ACI) department as part of the Web and Mobile Applications (WMA) team as a software developer with an opportunity to demonstrate and expand both your technical and soft skills. Our team is brought together by a shared belief in using our software engineering skills to add value to the world. We are a passionate and diverse team of Software Engineers, DevOps, Project Managers, and Support staff brought together to embody the vision of creating software to change the world.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Software-Developer_R_00020298" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
