--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -51,6 +51,20 @@
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
+				<a aria-controls="eng-sci-assoc" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#eng-sci-assoc" role="button">Engineering Scientist Associate</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="eng-sci-assoc" role="tabpanel">
+			<div class="panel-body">
+				<p>
+					This position will join the Texas Advanced Computing Center (TACC) as part of the Technical Infrastructure team. The position will provide technical expertise to TACC&#39;s advanced computing activities, supporting and enhancing TACC&#39;s world class supercomputing resources.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Engineering-Scientist-Associate_R_00021032" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
 				<a aria-controls="post-doc-fellow" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#post-doc-fellow" role="button">Postdoctoral Fellow</a></h4>
 		</div>
 		<div aria-labelledby="data" class="panel-collapse collapse" id="post-doc-fellow" role="tabpanel">
