--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-connected.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-connected.html
@@ -112,8 +112,8 @@
 					</ul>-->
 					<p>
 						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257c%252f143oHZkDNA%253d&amp;filter=peid%7C%2F143oHZkDNA%3D" target="_blank">Program Forms</a></p>
-					<p><small>
-						Release and Indemnification,<br />
+					<p>
+						<small>Release and Indemnification,<br />
 						Media Release,<br />
 						Y.P.P. Medical Treatment Authorization<br />
 						&amp; Transportation Form</small></p>
