--- a/web-content/root/education-archived/stem-programs/k-12/code-at-tacc/cybersecurity-comptia-and-certification-virtual-program.html
+++ b/web-content/root/education-archived/stem-programs/k-12/code-at-tacc/cybersecurity-comptia-and-certification-virtual-program.html
@@ -40,19 +40,19 @@
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
-				<span class="data-banner__title">Application</span> <a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_e2R16TteAK9kUo5" target="_blank">Click to Apply</a></h2>
-			<!-- OPEN: Close on Date. -->
+				<span class="data-banner__title">Application</span><!--<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_e2R16TteAK9kUo5" target="_blank">Click to Apply</a>--></h2>
+			<!-- OPEN: Close on Date. --><!--
 			<p class="data-banner__content">
 				Registration closes on June 3rd, 2020.</p>
-			<!-- OPEN: Close on Date. Notify by Date --><!--
+			--><!-- OPEN: Close on Date. Notify by Date --><!--
 			<p class="data-banner__content  small">
 				Registration closes on _Month_ _DATE_, _YEAR_. Students to be notified of acceptance on _Month_ _DATE_, _YEAR_.</p>
 			--><!-- CLOSED: Notify by Date --><!--
 			<p class="data-banner__content  small">
 				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
-			--><!-- CLOSED: Simple --><!--
+			--><!-- CLOSED: Simple -->
 			<p class="data-banner__content">
-				Applications closed.</p>--></div>
+				Applications closed.</p></div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
 				<span class="data-banner__title">Cost</span> <span class="data-banner__title-content">FREE</span></h2>
