--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-robotics-content.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-robotics-content.html
@@ -53,18 +53,19 @@
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
-				<span class="data-banner__title">Application</span> <a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_4UiwnpRGmA1obQ2" target="_blank">Click to Apply</a></h2>
+				<span class="data-banner__title">Application</span><!--<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_4UiwnpRGmA1obQ2" target="_blank">Click to Apply</a>--></h2>
 			<!-- OPEN: Close on Date. --><!--
 			<p class="data-banner__content">
-				Registration closes on _Month_ _DATE_, _YEAR_.</p>--><!-- OPEN: Close on Date. Notify by Date -->
+				Registration closes on _Month_ _DATE_, _YEAR_.</p>
+			--><!-- OPEN: Close on Date. Notify by Date --><!--
 			<p class="data-banner__content  small">
 				Application closes April 25, 2022. Students to be notified of acceptance on May 6, 2022.</p>
-			<!-- CLOSED: Notify by Date --><!--
+			--><!-- CLOSED: Notify by Date --><!--
 			<p class="data-banner__content  small">
 				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
-			--><!-- CLOSED: Simple --><!--
+			--><!-- CLOSED: Simple -->
 			<p class="data-banner__content">
-				Applications closed.</p>--></div>
+				Check back in January 2023 for future opportunities.</p></div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
 				<span class="data-banner__title">Cost</span> <span class="data-banner__title-content">FREE</span></h2>
