--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-connected.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-connected.html
@@ -118,16 +118,16 @@
 						Y.P.P. Medical Treatment Authorization<br />
 						&amp; Transportation Form</small></p>
 				</div>
-				<!--<div class="col-md-4 col-sm-12">
+				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
 					<ul class="info-list">
 						<li>
-							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+Connected.pdf" target="_blank">2021 Y.P.P. Communication Plan - English</a></li>
+							<a href="https://cep.tacc.utexas.edu/media/filer_public/8e/a1/8ea1b6d5-7f27-4f7a-b95a-39d8ce28e6f4/ypp-communication-plan-overnight-camp-connected-2022_english.pdf" target="_blank">2022 Y.P.P. Communication Plan - English</a></li>
 						<li>
-							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+Connected+-+SPANISH.pdf" target="_blank">2021 Y.P.P. Communication Plan - Español</a></li>
+							<a href="https://cep.tacc.utexas.edu/media/filer_public/ca/87/ca872dc7-1feb-483e-9cc6-a804f8dc5c83/ypp-communication-plan-overnight-camp-connected-2022_spanish.pdf" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
 					</ul>
-				</div>--></div>
+				</div></div>
 		</div>
 	</div>
 </div>
