chore(rt-22468/rt-21924): connected camp doc URLs

--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-cybersecurity.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-cybersecurity.html
@@ -128,9 +128,9 @@
 						CAMP PROGRAM</h4>
 					<ul class="info-list">
 						<li>
-							<a href="/documents/1084364/1736606/2022+YPP-Communication-Plan-Cybersecurity+English.pdf" target="_blank">2022 Y.P.P. Communication Plan - English</a></li>
+							<a href="/documents/1084364/1736606/YPP-Communication-Plan-Overnight-Camp-%28Connected%29-2022+English.pdf" target="_blank">2022 Y.P.P. Communication Plan - English</a></li>
 						<li>
-							<a href="/documents/1084364/1736606/2022+YPP-Communication-Plan-Cybersecurity-Spanish.pdf" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
+							<a href="/documents/1084364/1736606/YPP-Communication-Plan-Overnight-Camp-%28Connected%29-2022+Spanish.pdf" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
 					</ul>
 				</div>
 			</div>
