chore(rt-22468/rt-21924): fix connect & cyber camp
- liferay-hosted comm plans for connected were on cyber camp
- cep-hosted comm plans for connected were still on connected camp

This fixes both problems. Reported to Wes by Damian on this day.

--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-connected.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-connected.html
@@ -123,9 +123,9 @@
 						CAMP PROGRAM</h4>
 					<ul class="info-list">
 						<li>
-							<a href="https://cep.tacc.utexas.edu/media/filer_public/8e/a1/8ea1b6d5-7f27-4f7a-b95a-39d8ce28e6f4/ypp-communication-plan-overnight-camp-connected-2022_english.pdf" target="_blank">2022 Y.P.P. Communication Plan - English</a></li>
+							<a href="/documents/1084364/1736606/YPP-Communication-Plan-Overnight-Camp-%28Connected%29-2022+English.pdf" target="_blank">2022 Y.P.P. Communication Plan - English</a></li>
 						<li>
-							<a href="https://cep.tacc.utexas.edu/media/filer_public/ca/87/ca872dc7-1feb-483e-9cc6-a804f8dc5c83/ypp-communication-plan-overnight-camp-connected-2022_spanish.pdf" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
+							<a href="/documents/1084364/1736606/YPP-Communication-Plan-Overnight-Camp-%28Connected%29-2022+Spanish.pdf" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
 					</ul>
 				</div></div>
 		</div>
