--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-cybersecurity.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-cybersecurity.html
@@ -59,7 +59,8 @@
 				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
 			--><!-- CLOSED: Simple -->
 			<p class="data-banner__content">
-				Check back in January 2023 for future opportunities.</p></div>
+				Check back in January 2023 for future opportunities.</p>
+		</div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
 				<span class="data-banner__title">Cost</span> <span class="data-banner__title-content">FREE</span></h2>
@@ -116,8 +117,8 @@
 					</ul>-->
 					<p>
 						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cXKQGsJJEGEI%253d&amp;filter=peid%7CXKQGsJJEGEI%3D" target="_blank">Program Forms</a></p>
-					<p><small>
-						Code of Conduct,<br />
+					<p>
+						<small>Code of Conduct,<br />
 						Release and Indemnification,<br />
 						Media Release,<br />
 						Y.P.P. Medical Treatment Authorization<br />
@@ -128,9 +129,9 @@
 						CAMP PROGRAM</h4>
 					<ul class="info-list">
 						<li>
-							<a href="/documents/1084364/1736606/YPP-Communication-Plan-Overnight-Camp-%28Connected%29-2022+English.pdf" target="_blank">2022 Y.P.P. Communication Plan - English</a></li>
+							<a href="/documents/1084364/1736606/2022+YPP-Communication-Plan-Cybersecurity+English.pdf" target="_blank">2022 Y.P.P. Communication Plan - English</a></li>
 						<li>
-							<a href="/documents/1084364/1736606/YPP-Communication-Plan-Overnight-Camp-%28Connected%29-2022+Spanish.pdf" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
+							<a href="/documents/1084364/1736606/2022+YPP-Communication-Plan-Cybersecurity-Spanish.pdf" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
 					</ul>
 				</div>
 			</div>
