chore(rt-22734): epic code.org, new sentence

--- a/web-content/root/education-archived/EPIC/WeTeach_CS/code-org.html
+++ b/web-content/root/education-archived/EPIC/WeTeach_CS/code-org.html
@@ -31,7 +31,7 @@
 	<h4>
 		Professional Learning Program - CS Discoveries and CS Principles</h4>
 	<p>
-		Texas Computer Science courses, including those aligned to CS Discoveries (Fundamentals of CS) and CS Principles, have recently moved to CTE and qualify for weighted funding. Teachers should check with their administrators to see if these funds are available to support their involvement in this Professional Learning Program. There are also scholarships available for those that qualify.</p>
+		Texas Computer Science courses, including those aligned to CS Discoveries (Fundamentals of CS) and CS Principles, have recently moved to CTE and qualify for weighted funding. Teachers should check with their administrators to see if these funds are available to support their involvement in this Professional Learning Program. There are also scholarships available for those that qualify. Fundamentals of CS and CS Principles (AP and non-AP) can be taught by a teacher with either a Technology Applications or Computer Science 8-12 certification.</p>
 	<h5>
 		CS Discoveries</h5>
 	<p>
