chore: update events (by slack request)

--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -16,3 +16,13 @@
 			Austin, TX</p>
 	</div>
 </div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://sc22.supercomputing.org/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/ss22-logo.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://sc22.supercomputing.org/" target="_blank">SC22</a><br />
+			November 13–18, 2022&nbsp; |&nbsp;
+			Dallas, TX</p>
+	</div>
+</div>
