chore(rt-22733): epic certification new bullets

--- a/web-content/root/education-archived/EPIC/WeTeach_CS/certification.html
+++ b/web-content/root/education-archived/EPIC/WeTeach_CS/certification.html
@@ -61,9 +61,11 @@
 		<li>
 			Learn Text-Based Programming</li>
 		<li>
-			Take CS 8-12 Certification Prep Course – Online</li>
+			Take the CS 8-12 Certification Prep Course (<a href="https://utakeit.tacc.utexas.edu/foundations-of-cs-texes-prep/" target="_blank">Texas</a> or <a href="https://utakeit.tacc.utexas.edu/foundations-cs-praxis/" target="_blank">Praxis</a>) – Online</li>
 		<li>
-			Take CS 8-12 Certification Prep Course – In-Person</li>
+			Take the CS 8-12 Certification Prep Course (<a href="https://utakeit.tacc.utexas.edu/professional-development/WTCS_CertPrep/" target="_blank">Texas</a> or <a href="https://utakeit.tacc.utexas.edu/professional-development/WTCS_PraxisPrep/" target="_blank">Praxis</a>) – In-Person</li>
+		<li>
+			Use the <a href="https://utakeit.tacc.utexas.edu/weteach-cert-prep-practice-c/" target="_blank">Certification Prep Practice Packet</a></li>
 	</ul>
 	<p>
 		<b><a class="weteachcs-cta" href="/web/website/epic/weteachcs/certification/prep-checklist">Certification Prep Checklist</a></b></p>
