feat: update internships (as per slack request)

--- a/web-content/root/about/jobs/internships.html
+++ b/web-content/root/about/jobs/internships.html
@@ -19,7 +19,13 @@
 	<b>Required</b>: Associate's or Bachelor's degree • Training in computer science, coding boot-camp, or similar hands-on instruction in web development • A quick learner • Must be organized and detail-oriented • Must have the ability to work independently and follow directions • Professional demeanor with excellent interpersonal skills</p>
 <p>
 	<b>Preferred</b>: Some or all of the following are preferred: Bachelor's degree • Experience with Python/Django, Java, JavaScript, Jupyter, Jenkins, Agave, and REST APIs, QA Testing and/or other programming highly desirable • Ability to isolate/eliminate functional and usability issues</p>
-<center>
-	<p style="margin:25px 0px; width:50%; text-align:center;">
-		<a class="btn btn-warning btn-lg btn-block" href="https://utaustin.wd1.myworkdayjobs.com/en-US/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Temporary-Research-Engineering--Scientist-Assistant--Software-Trainee----UTEMPS-_R_00013653" target="_blank">APPLY NOW</a></p>
-</center>
+<div class="row" style="margin:25px 0px; text-align:center;">
+    <div class="col-lg-6">
+	    <p>
+		    For staff job listings, see <strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff" target="_blank">UT Staff Jobs Board</a></strong>.</p>
+    </div>
+    <div class="col-lg-6">
+	    <p>
+		    To learn about working at UT, see <strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff" target="_blank">UT Jobs</a></strong>.</p>
+    </div>
+</div>
