fix(rt-23044): add 1st notice of vislab close

--- a/web-content/root/education-archived/tours--vis-lab.html
+++ b/web-content/root/education-archived/tours--vis-lab.html
@@ -9,6 +9,8 @@
 	<div class="col-md-6">
 		<p>
 			<b>In-Person Tour: Monday, Wednesday, and Friday – 10am -3pm</b></p>
+		<p class="portlet-msg-info">
+			The Vislab will be closed for tours during the month of August. Touring availability begins the week of September 5th.</p>
 		<p>
 			Located on UT Austin's Main Campus in the POB Building, the Vislab is a showcase of the technologies that are used to support researchers as they turn their simulations into visually appealing, scientifically significant images. These tours are popular amongst K-12 and undergraduate students who engage hands-on with Lasso, a multi-touch screen, and Stallion, the world's highest resolution tiled wall.</p>
 		<p style="width:350px;">
