fix(rt-23044): add 2nd  notice of vislab close

--- a/web-content/root/education-archived/tours/schedule--info.html
+++ b/web-content/root/education-archived/tours/schedule--info.html
@@ -2,4 +2,6 @@
 	Due to extensive Summer programming, TACC will not be accepting K-12 tour requests until the start of Fall semester. We apologize for the inconvenience.</p>-->
 <p>
 	Questions? Please contact <a href="mailto:outreach@tacc.utexas.edu">outreach@tacc.utexas.edu</a> or <a href="tel:5124759411">512-475-9411</a>.</p>
+<p class="portlet-msg-info">
+    The Vislab will be closed for tours during the month of August. Touring availability begins the week of September 5th.</p>
 <hr />
