chore(rt-22961): update events

--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -8,6 +8,26 @@
 	Training &amp; Events</h2>
 <div class="row">
 	<div class="col-xs-3">
+		<a href="https://www.tacc.utexas.edu/education/professionals/tacc-institutes/hpc-leadership" style="margin-bottom:10px;"><img class="img-responsive" src="/documents/1084364/2064636/hpc-leadership.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://www.tacc.utexas.edu/education/professionals/tacc-institutes/hpc-leadership">HPC Leadership</a><br />
+			September 12–14, 2022&nbsp; |&nbsp;
+			Austin, TX</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://sc22.supercomputing.org/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/taccster-2022.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://sc22.supercomputing.org/" target="_blank">TACCster 2022</a><br />
+			September 28–30, 2022&nbsp; |&nbsp;
+			Austin, TX</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
 		<a href="https://sc22.supercomputing.org/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/ss22-logo.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
