chore(rt-23069): update events

--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -8,22 +8,41 @@
 	Training &amp; Events</h2>
 <div class="row">
 	<div class="col-xs-3">
+		<a href="https://www.tacc.utexas.edu/education/professionals/tacc-institutes/scientific-visualization" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/crt-scivis.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://www.tacc.utexas.edu/education/professionals/tacc-institutes/scientific-visualization" target="_blank">Scientific Visualization (Virtual)</a><br />
+			August 24 – September 14, 2022</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
 		<a href="https://www.tacc.utexas.edu/education/professionals/tacc-institutes/hpc-leadership" style="margin-bottom:10px;"><img class="img-responsive" src="/documents/1084364/2064636/hpc-leadership.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://www.tacc.utexas.edu/education/professionals/tacc-institutes/hpc-leadership">HPC Leadership</a><br />
+			<a href="https://www.tacc.utexas.edu/education/professionals/tacc-institutes/hpc-leadership">HPC Leadership Institute in Cooperation with Microsoft and MITRE (In Person Only)</a><br />
 			September 12–14, 2022&nbsp; |&nbsp;
+			Dallas, TX</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://www.tacc.utexas.edu/taccster-2022" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/taccster-2022.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://www.tacc.utexas.edu/taccster-2022" target="_blank">TACCster 2022</a><br />
+			September 28–30, 2022<br />
 			Austin, TX</p>
 	</div>
 </div>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://sc22.supercomputing.org/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/taccster-2022.png" style="margin-bottom:10px;" /></a></div>
+		<a href="https://sciencegateways.org/gateways2022" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/sgci.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://sc22.supercomputing.org/" target="_blank">TACCster 2022</a><br />
-			September 28–30, 2022&nbsp; |&nbsp;
-			Austin, TX</p>
+			<a href="https://sciencegateways.org/gateways2022" target="_blank">Gateways 2022</a><br />
+			October 18–20, 2022<br />
+			San Diego, CA</p>
 	</div>
 </div>
 <div class="row">
@@ -32,7 +51,7 @@
 	<div class="col-xs-9">
 		<p>
 			<a href="https://sc22.supercomputing.org/" target="_blank">SC22</a><br />
-			November 13–18, 2022&nbsp; |&nbsp;
+			November 13–18, 2022<br />
 			Dallas, TX</p>
 	</div>
 </div>
